fixed overflow problem on menu items

--- a/module2_solution/stylesheet.css
+++ b/module2_solution/stylesheet.css
@@ -33,7 +33,6 @@ section {
   border: 1px solid black;
   background-color: #c7e122;
   width: 100%;
-  height: 200px;
   font-family: Helvetica;
   color: black;
   position: relative;
